--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "tests": "vendor/bin/phpunit --stop-on-defect tests",
         "lint": "vendor/bin/phpcs .",
         "autofix": "vendor/bin/phpcbf .",
-		"types": "vendor/bin/phpstan --memory-limit=2G",
+		"static": "vendor/bin/phpstan --memory-limit=2G && vendor/bin/psalm",
 		"jstests": "bun test"
     },
     "require": {
@@ -29,7 +29,8 @@
         "squizlabs/php_codesniffer": "3.*",
         "phpunit/phpunit": ">=10.0",
         "phpcompatibility/php-compatibility": "^9.3",
-        "phpstan/phpstan": "^1.12"
+        "phpstan/phpstan": "^1.12",
+        "vimeo/psalm": "^5.26"
     },
     "autoload": {
         "psr-4": {
