I'm not sure why but psalm is giving me stale results so switch to no-cache
It's very fast anyway so not a big deal.

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "tests": "vendor/bin/phpunit --stop-on-defect tests",
         "lint": "vendor/bin/phpcs .",
         "autofix": "vendor/bin/phpcbf .",
-		"static": "vendor/bin/phpstan --memory-limit=2G && vendor/bin/psalm",
+		"static": "vendor/bin/phpstan --memory-limit=2G && vendor/bin/psalm --no-cache",
 		"jstests": "bun test"
     },
     "require": {
