Typesafe replacement for GET, POST and REQUEST superglobals

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,9 @@
             "Gatherling\\": "gatherling/",
             "Gatherling\\Admin\\": "gatherling/",
             "Gatherling\\Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "gatherling/Views/helpers.php"
+        ]
     }
 }
