--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "phpunit/phpunit": ">=10.0",
         "phpcompatibility/php-compatibility": "^9.3",
         "phpstan/phpstan": "^1.12",
-        "vimeo/psalm": "^5.26"
+        "vimeo/psalm": "^5.26",
+        "psalm/plugin-phpunit": "^0.19.0"
     },
     "autoload": {
         "psr-4": {
